--- a/css/main.css
+++ b/css/main.css
@@ -3,15 +3,15 @@
 
 body{
     font-family: Lato, 'Helvetica Neue', Helvetica, sans-serif;
-    font-size: 18px;
-    font-weight: 300;
+    font-size: 1.2rem;
+    font-weight: 450;
     background: url('../img/background.jpg') fixed;
     background-size: cover;
 }
 
 h1, h2, h3{
     font-family: Raleway, 'Helvetica Neue', Helvetica, sans-serif;
-    font-weight: 300;
+    font-weight: 600;
 }
 
 h1{
@@ -20,15 +20,15 @@ h1{
 }
 
 h2, h3{
-    color: #505050
+    color: black;
 }
 
 h2{
-    font-size: 150%;
+    font-size: 160%;
 }
 
 h3{
-    font-size: 125%;
+    font-size: 130%;
 }
 
 a:link, a:visited {
@@ -37,18 +37,18 @@ a:link, a:visited {
 }
 
 a:hover, a:focus{
-    color: #0000EE;
+    color:orange;
 }
 
 main{
-    margin: 20px 20px 20px 30%;
+    margin: 1.25rem 3rem;
     background-image: url('../img/ricepaper_v3.png');
-    opacity: 0.9;
+    opacity: 0.8;
 }
 
 header{
     padding: 1em;
-    background-color: #FA5A0F;
+    background-color: #C94203;
     border-bottom: solid 5px #EA4A00;
     color: #FFFFFF;
 }
@@ -65,6 +65,9 @@ footer{
     border-top: solid 5px #EC791F;
     font-size: 80%;
     text-align: right;
+}
+footer a:hover {
+    color:white;
 }
 
 dd{
